[ci skip] Updated dependencytrack/project-id in catalog-info.yaml

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -12,7 +12,7 @@ metadata:
     sonarqube.org/project-key: default/edmo101
     
 
-    dependencytrack/project-id: ""
+    dependencytrack/project-id: "cabe69e0-98da-4edb-bb8d-e6eb46de0099"
     iap/app-info: "1/dd8dfa19-da88-4960-b7a7-70b4063db5ea"
     backstage.io/techdocs-ref: dir:.
 
